--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,5 +1,6 @@
 {% if latest_question_list %}
     <ul>
+        test3
         test2
         test1
     {% for question in latest_question_list %}
